--- a/index.html
+++ b/index.html
@@ -3,12 +3,109 @@
 <head lang="uk">
     <meta charset="UTF-8">
     <title>My Page</title>
-
-
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>Hello Git</p>
+<div class="background">
+    <div class="container">
+        <div class=" left">
+            <div class="inner">
+                <div class="segment form">
+                    <input class="input" type="text" placeholder="Item name" width="100%">
+                    <button class="button add">Add</button>
+                </div>
+                <div class="list">
+                    <div class="name-cell">
+                        <div class="product-name">Tomatoes</div>
+                    </div>
+                    <div class="central-cell">
+                        <button class="button round minus red">
+                            <p>&#10134</p>
+                        </button>
+                        <div class="count">1</div>
+                        <button class="button round plus green">
+                            <p>&#10133</p>
+                        </button>
+                    </div>
+                    <div class="right-cell">
+                        <button class="button bought">Bought</button>
+                        <button class="button red delete-button">
+                            <p>&#10006</p>
+                        </button>
+                    </div>
+                </div>
+                <div class="list">
+                    <div class="name-cell">
+                        <div class="product-name">Cookies</div>
+                    </div>
+                    <div class="central-cell">
+                        <button class="button round minus red">
+                            <p>&#10134</p>
+                        </button>
+                        <div class="count">1</div>
+                        <button class="button round plus green">
+                            <p>&#10133</p>
+                        </button>
+                    </div>
+                    <div class="right-cell">
+                        <button class="button bought">Bought</button>
+                        <button class="button red delete-button">
+                            <p>&#10006</p>
+                        </button>
+                    </div>
+                </div>
+                <div class="list">
+                    <div class="name-cell">
+                        <div class="product-name">Cheese</div>
+                    </div>
+                    <div class="central-cell">
+                        <button class="button round minus red">
+                            <p>&#10134</p>
+                        </button>
+                        <div class="count">1</div>
+                        <button class="button round plus green">
+                            <p>&#10133</p>
+                        </button>
+                    </div>
+                    <div class="right-cell">
+                        <button class="button bought">Bought</button>
+                        <button class="button red delete-button">
+                            <p>&#10006</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class=" right">
+            <div class="inner">
+                <div class=" segment text">
+                    <h3 style="margin: 0">LEFT</h3>
+                </div>
+                <div class="segment items-left">
+                    <div class="products-holder">
+                        <div class="product">
+                            <div class="label">Tomatoes</div>
+                            <div class="circular">1</div>
+                        </div>
+                        <div class="product">
+                            <div class="label">Cookies</div>
+                            <div class="circular">1</div>
+                        </div>
+                        <div class="product">
+                            <div class="label">Cheese</div>
+                            <div class="circular">1</div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" segment text">
+                    <h3 style="margin: 0;">BOUGHT</h3>
+                </div>
+                <div class=" segment items-bought">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
